# coinflip-cold-wallet-kit

./: .gitignore  README.md  README_EN.md  coin_flip_wallet.py  coin_to_bip39_hex.py  derive_addresses_offline.py  pyproject.toml  wallet_core.py
docs/: PROJECT_OVERVIEW.md
docs/plans/: 2026-02-24-security-audit-design.md  2026-02-24-security-audit-v2-design.md  2026-02-24-security-audit-v2-implementation.md  2026-02-24-shared-core-and-noninteractive-flag.md
tests/: test_cli_security_hardening.py  test_coin_flip_wallet_pytest.py  test_layering.py  test_review_fixes.py  test_security_audit_fixes.py  test_security_audit_v2.py  test_shared_core_and_cli.py  test_wordlist_integrity.py
