[project]
name = "coinflip-cold-wallet-kit"
version = "0.1.0"
description = "Offline BIP39/BIP32 wallet utilities for BTC and ETH."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pycryptodome>=3.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[tool.uv]
package = false
